force-app/main/default/objects/Opportunity/fields/Total_Cases__c.field-meta.xml
<CustomField>
    <fullName>Total_Cases__c</fullName>
    <label>Total Cases</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>