force-app/main/default/objects/Opportunity/recordTypes/First_Record_Sales.recordType-meta.xml
<RecordType>
    <fullName>First_Record_Sales</fullName>
    <active>true</active>
    <businessProcess>First Sales</businessProcess>
    <label>First Record Sales</label>
</RecordType>