force-app/main/default/objects/Opportunity/recordTypes/Second_Record_Sales.recordType-meta.xml
<RecordType>
    <fullName>Second_Record_Sales</fullName>
    <active>true</active>
    <businessProcess>Second Sales</businessProcess>
    <label>Second Record Sales</label>
</RecordType>