force-app/main/default/objects/Opportunity/validationRules/Date_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Date_Validation</fullName>
    <active>false</active>
    <errorConditionFormula>AND(ISPICKVAL(StageName , &apos;Closed Won&apos;),  CloseDate &lt; TODAY())</errorConditionFormula>
    <errorMessage>Closed Date cannot be past</errorMessage>
</ValidationRule>